--- a/model_title_main_passage_keywords/coattention_model_title_main_passage_keywords.ipynb
+++ b/model_title_main_passage_keywords/coattention_model_title_main_passage_keywords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,64 +290,140 @@
     "    \n",
     "    \n",
     "    #level 1 first signal of article\n",
-    "    #attention article title and table title\n",
-    "    att_A_title_T_title = attention_method(rep_article_title,rep_table_title,rep_article_title)\n",
-    "    rep_att_A_title_T_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_title)\n",
-    "    vector_A_title_T_title = tf.keras.layers.Flatten()(rep_att_A_title_T_title)\n",
     "    \n",
-    "    #attention article title and table text\n",
-    "    att_A_title_T_text = attention_method(rep_article_title,rep_table_text,rep_article_title)\n",
-    "    rep_att_A_title_T_text = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_text)\n",
-    "    vector_A_title_T_text = tf.keras.layers.Flatten()(rep_att_A_title_T_text)\n",
+    "    # first side\n",
     "    \n",
-    "    #attention article title and table keywords\n",
-    "    att_A_title_T_keywords = attention_method(rep_article_title,rep_table_keywords,rep_article_title)\n",
-    "    rep_att_A_title_T_keywords = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_keywords)\n",
-    "    vector_A_title_T_keywords = tf.keras.layers.Flatten()(rep_att_A_title_T_keywords)\n",
+    "    #coattention article title and table title\n",
+    "    att_A_title_T_title1 = attention_method(rep_article_title,rep_table_title,rep_article_title)\n",
+    "    rep_att_A_title_T_title1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_title1)\n",
+    "    vector_A_title_T_title1 = tf.keras.layers.Flatten()(rep_att_A_title_T_title1)\n",
+    "    \n",
+    "    #coattention article title and table text\n",
+    "    att_A_title_T_text1 = attention_method(rep_article_title,rep_table_text,rep_article_title)\n",
+    "    rep_att_A_title_T_text1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_text1)\n",
+    "    vector_A_title_T_text1 = tf.keras.layers.Flatten()(rep_att_A_title_T_text1)\n",
+    "    \n",
+    "    #coattention article title and table keywords\n",
+    "    att_A_title_T_keywords1 = attention_method(rep_article_title,rep_table_keywords,rep_article_title)\n",
+    "    rep_att_A_title_T_keywords1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_keywords1)\n",
+    "    vector_A_title_T_keywords1 = tf.keras.layers.Flatten()(rep_att_A_title_T_keywords1)\n",
+    "    \n",
+    "    #second side\n",
+    "\n",
+    "    #coattention article title and table title\n",
+    "    att_A_title_T_title2 = attention_method(rep_table_title,rep_article_title,rep_table_title)\n",
+    "    rep_att_A_title_T_title2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_title2)\n",
+    "    vector_A_title_T_title2 = tf.keras.layers.Flatten()(rep_att_A_title_T_title2)\n",
+    "    \n",
+    "    #coattention article title and table text\n",
+    "    att_A_title_T_text2 = attention_method(rep_table_text,rep_article_title,rep_table_text)\n",
+    "    rep_att_A_title_T_text2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_text2)\n",
+    "    vector_A_title_T_text2 = tf.keras.layers.Flatten()(rep_att_A_title_T_text2)\n",
+    "    \n",
+    "    #coattention article title and table keywords\n",
+    "    att_A_title_T_keywords2 = attention_method(rep_table_keywords,rep_article_title,rep_table_keywords)\n",
+    "    rep_att_A_title_T_keywords2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_title_T_keywords2)\n",
+    "    vector_A_title_T_keywords2 = tf.keras.layers.Flatten()(rep_att_A_title_T_keywords2)\n",
     "    \n",
     "    \n",
     "    \n",
     "    #level 2 second signal of article\n",
-    "    #attention article text and table title\n",
-    "    att_A_text_T_title = attention_method(rep_article_text,rep_table_title,rep_article_text)\n",
-    "    rep_att_A_text_T_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_title)\n",
-    "    vector_A_text_T_title = tf.keras.layers.Flatten()(rep_att_A_text_T_title)\n",
     "    \n",
-    "    #attention article text and table text\n",
-    "    att_A_text_T_text = attention_method(rep_article_text,rep_table_text,rep_article_text)\n",
-    "    rep_att_A_text_T_text = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_text)\n",
-    "    vector_A_text_T_text = tf.keras.layers.Flatten()(rep_att_A_text_T_text)\n",
+    "    #first side\n",
     "    \n",
-    "    #attention article text and table keywords\n",
-    "    att_A_text_T_keywords = attention_method(rep_article_text,rep_table_keywords,rep_article_text)\n",
-    "    rep_att_A_text_T_keywords = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_keywords)\n",
-    "    vector_A_text_T_keywords = tf.keras.layers.Flatten()(rep_att_A_text_T_keywords)\n",
+    "    #coattention article text and table title\n",
+    "    att_A_text_T_title1 = attention_method(rep_article_text,rep_table_title,rep_article_text)\n",
+    "    rep_att_A_text_T_title1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_title1)\n",
+    "    vector_A_text_T_title1 = tf.keras.layers.Flatten()(rep_att_A_text_T_title1)\n",
     "    \n",
+    "    #coattention article text and table text\n",
+    "    att_A_text_T_text1 = attention_method(rep_article_text,rep_table_text,rep_article_text)\n",
+    "    rep_att_A_text_T_text1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_text1)\n",
+    "    vector_A_text_T_text1 = tf.keras.layers.Flatten()(rep_att_A_text_T_text1)\n",
     "    \n",
+    "    #coattention article text and table keywords\n",
+    "    att_A_text_T_keywords1 = attention_method(rep_article_text,rep_table_keywords,rep_article_text)\n",
+    "    rep_att_A_text_T_keywords1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_keywords1)\n",
+    "    vector_A_text_T_keywords1 = tf.keras.layers.Flatten()(rep_att_A_text_T_keywords1)\n",
+    "    \n",
+    "    #second side\n",
     "\n",
+    "    #coattention article text and table title\n",
+    "    att_A_text_T_title2 = attention_method(rep_table_title,rep_article_text,rep_table_title)\n",
+    "    rep_att_A_text_T_title2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_title2)\n",
+    "    vector_A_text_T_title2 = tf.keras.layers.Flatten()(rep_att_A_text_T_title2)\n",
+    "    \n",
+    "    #coattention article text and table text\n",
+    "    att_A_text_T_text2 = attention_method(rep_table_text,rep_article_text,rep_table_text)\n",
+    "    rep_att_A_text_T_text2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_text2)\n",
+    "    vector_A_text_T_text2 = tf.keras.layers.Flatten()(rep_att_A_text_T_text2)\n",
+    "    \n",
+    "    #coattention article text and table keywords\n",
+    "    att_A_text_T_keywords2 = attention_method(rep_table_keywords,rep_article_text,rep_table_keywords)\n",
+    "    rep_att_A_text_T_keywords2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_text_T_keywords2)\n",
+    "    vector_A_text_T_keywords2 = tf.keras.layers.Flatten()(rep_att_A_text_T_keywords2)\n",
+    "    \n",
+    "    \n",
     "    #level 3 third signal of article\n",
-    "    #attention article keywords and table title\n",
-    "    att_A_keywords_T_title = attention_method(rep_article_keywords,rep_table_title,rep_article_keywords)\n",
-    "    rep_att_A_keywords_T_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_title)\n",
-    "    vector_A_keywords_T_title = tf.keras.layers.Flatten()(rep_att_A_keywords_T_title)\n",
     "    \n",
-    "    #attention article keywords and table text\n",
-    "    att_A_keywords_T_text = attention_method(rep_article_keywords,rep_table_text,rep_article_keywords)\n",
-    "    rep_att_A_keywords_T_text = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_text)\n",
-    "    vector_A_keywords_T_text = tf.keras.layers.Flatten()(rep_att_A_keywords_T_text)\n",
+    "    #first side\n",
     "    \n",
-    "    #attention article keywords and table keywords\n",
-    "    att_A_keywords_T_keywords = attention_method(rep_article_keywords,rep_table_keywords,rep_article_keywords)\n",
-    "    rep_att_A_keywords_T_keywords = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_keywords)\n",
-    "    vector_A_keywords_T_keywords = tf.keras.layers.Flatten()(rep_att_A_keywords_T_keywords)\n",
+    "    #coattention article keywords and table title\n",
+    "    att_A_keywords_T_title1 = attention_method(rep_article_keywords,rep_table_title,rep_article_keywords)\n",
+    "    rep_att_A_keywords_T_title1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_title1)\n",
+    "    vector_A_keywords_T_title1 = tf.keras.layers.Flatten()(rep_att_A_keywords_T_title1)\n",
     "    \n",
-    "\n",
+    "    #coattention article keywords and table text\n",
+    "    att_A_keywords_T_text1 = attention_method(rep_article_keywords,rep_table_text,rep_article_keywords)\n",
+    "    rep_att_A_keywords_T_text1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_text1)\n",
+    "    vector_A_keywords_T_text1 = tf.keras.layers.Flatten()(rep_att_A_keywords_T_text1)\n",
+    "    \n",
+    "    #coattention article keywords and table keywords\n",
+    "    att_A_keywords_T_keywords1 = attention_method(rep_article_keywords,rep_table_keywords,rep_article_keywords)\n",
+    "    rep_att_A_keywords_T_keywords1 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_keywords1)\n",
+    "    vector_A_keywords_T_keywords1 = tf.keras.layers.Flatten()(rep_att_A_keywords_T_keywords1)\n",
+    "     \n",
+    "    #second side\n",
+    "    \n",
+    "    #coattention article keywords and table title\n",
+    "    att_A_keywords_T_title2 = attention_method(rep_table_title,rep_article_keywords,rep_table_title)\n",
+    "    rep_att_A_keywords_T_title2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_title2)\n",
+    "    vector_A_keywords_T_title2 = tf.keras.layers.Flatten()(rep_att_A_keywords_T_title2)\n",
+    "    \n",
+    "    #coattention article keywords and table text\n",
+    "    att_A_keywords_T_text2 = attention_method(rep_table_text,rep_article_keywords,rep_table_text)\n",
+    "    rep_att_A_keywords_T_text2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_text2)\n",
+    "    vector_A_keywords_T_text2 = tf.keras.layers.Flatten()(rep_att_A_keywords_T_text2)\n",
+    "    \n",
+    "    #coattention article keywords and table keywords\n",
+    "    att_A_keywords_T_keywords2 = attention_method(rep_table_keywords,rep_article_keywords,rep_table_keywords)\n",
+    "    rep_att_A_keywords_T_keywords2 = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(att_A_keywords_T_keywords2)\n",
+    "    vector_A_keywords_T_keywords2 = tf.keras.layers.Flatten()(rep_att_A_keywords_T_keywords2)\n",
+    "    \n",
     "    #learned vector\n",
-    "    final_vector = tf.keras.layers.Concatenate()([vector_A_title_T_title,vector_A_title_T_text,vector_A_title_T_keywords,vector_A_text_T_title,vector_A_text_T_text,vector_A_text_T_keywords,vector_A_keywords_T_title,vector_A_keywords_T_text,vector_A_keywords_T_keywords])\n",
+    "    final_vector = tf.keras.layers.Concatenate()(\n",
+    "    [vector_A_title_T_title1,\n",
+    "     vector_A_title_T_title2,\n",
+    "     vector_A_title_T_text1,\n",
+    "     vector_A_title_T_text2,\n",
+    "     vector_A_title_T_keywords1,\n",
+    "     vector_A_title_T_keywords2,\n",
+    "     vector_A_text_T_title1,\n",
+    "     vector_A_text_T_title2,\n",
+    "     vector_A_text_T_text1,\n",
+    "     vector_A_text_T_text2,\n",
+    "     vector_A_text_T_keywords1,\n",
+    "     vector_A_text_T_keywords2,\n",
+    "     vector_A_keywords_T_title1,\n",
+    "     vector_A_keywords_T_title2,\n",
+    "     vector_A_keywords_T_text1,\n",
+    "     vector_A_keywords_T_text2,\n",
+    "     vector_A_keywords_T_keywords1,\n",
+    "     vector_A_keywords_T_keywords2])\n",
     "    \n",
-    "    MLP_input = tf.keras.layers.Dense(256, activation='relu')(final_vector)\n",
+    "    MLP_input = tf.keras.layers.Dense(512, activation='relu')(final_vector)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(MLP_input)\n",
-    "    MLP_hidden = tf.keras.layers.Dense(128, activation='relu')(dropout1)\n",
+    "    MLP_hidden = tf.keras.layers.Dense(256, activation='relu')(dropout1)\n",
     "    dropout2 = tf.keras.layers.Dropout(0.5, name=\"dropout2\")(MLP_hidden)\n",
     "    MLP_output = tf.keras.layers.Dense(1,activation='sigmoid')(dropout2)\n",
     "    \n",
@@ -387,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath=\"attention_model_title_main_passage_keywords_1_1_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
+    "filepath=\"coattention_model_title_main_passage_keywords_1_1_{epoch:02d}_{val_accuracy:.4f}.h5\"\n",
     "checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
